# mini-spire

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  architecture.md  pyproject.toml  research-framing.md  roadmap.md
.github/workflows/: ci.yml
analysis/: __init__.py  blog_figures.py  plots.py  trajectory.py
assets/: demo.tape
bindings/: _core.cc
configs/: baseline_shaped.yaml  baseline_sparse.yaml  long_shaped.yaml  long_sparse.yaml  long_strong.yaml
python/minispire/: __init__.py  env.py  eval.py  play.py  random_agent.py  train.py  train_config.py  watch.py
python/minispire/render/: __init__.py  avatars.py  intent.py  screen.py
python/tests/: test_env.py  test_eval.py  test_integration.py  test_play.py  test_smoke.py  test_train_config.py  test_trajectory.py  test_watch.py
src/: card.h  cli.cc  combat_env.cc  combat_env.h  combat_state.cc  combat_state.h  encounter.cc  encounter.h  enemy.cc  enemy.h  status_effect.h  turn_loop.cc  turn_loop.h
tests/: test_card.cc  test_combat_env.cc  test_combat_state.cc  test_encounter.cc  test_enemy.cc  test_helpers.cc  test_helpers.h  test_turn_loop.cc
