[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "minispire"
version = "0.1.0"
description = "Fast Slay the Spire combat engine for RL research"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rob Pitkin" }]
requires-python = ">=3.12,<3.13"
keywords = ["reinforcement-learning", "slay-the-spire", "gymnasium", "cpp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0",
  "gymnasium>=1.3",
  "rich>=13.0",
]

[project.optional-dependencies]
train = [
  "stable-baselines3>=2.9",
  "sb3-contrib>=2.9",
  "torch>=2.12",
  "wandb>=0.17",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "tensorboard>=2.16",
]
# Lightweight extra for CI: pytest + the deps needed by the fast,
# dependency-light tests (TrainConfig validation needs pydantic/pyyaml).
# Deliberately excludes torch/sb3/wandb to keep CI install fast (~12s vs
# ~60s with the full train extra). Local devs should use [dev].
ci = [
  "pytest>=8.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]
dev = [
  "pytest>=8.0",
  "minispire[train]",
]

[project.scripts]
minispire-play = "minispire.play:main"
minispire-train = "minispire.train:main"
minispire-eval = "minispire.eval:main"

[project.urls]
Repository = "https://github.com/rob-pitkin/mini-spire"

[tool.scikit-build]
cmake.version = ">=3.16"
cmake.build-type = "Release"
wheel.packages = ["python/minispire"]
# Only the extension target is needed for the wheel — the CLI binary and the
# GoogleTest binary are dev-only artifacts.
cmake.targets = ["_core"]
